fix: align and round button

--- a/frontend/index.scss
+++ b/frontend/index.scss
@@ -26,11 +26,11 @@ html {
     }
 }
 
-body {
-    margin: 0;
-    padding: 0;
-    color: #fcfcfc;
-    height: 100%;
+main.home {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 h1, h2, h3, h4, h5, h6,
@@ -49,6 +49,7 @@ p, a, span, li {
 button {
     color: var(--action-active);
     background-color: var(--action-disabledBackground);
+    border-radius: 10px;
 
     &:hover {
         background-color: var(--action-hover);
@@ -60,6 +61,11 @@ button {
 
     &:disabled {
         color: var(--action-disabled);
+    }
+
+    &.button-primary {
+        grid-column: 1 / 3; /* This makes the button span the entire width of the grid. */
+        justify-self: center; /* This centers the button within the grid cell. */
     }
 }
 
